--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1>Фронтенд программист</h1>
                 <p class="main_text">Создает одностраничные сайты (SPA) на React. Строит взаимодействие с бекендом через AJAX или WebSockets. Следит за производительностью и обеспечивает безопасное выполнение кода. Хорошо разбирается в браузерном API и веб-технологиях HTML, CSS, HTTP, DNS.</p>
                 <div class="link_about">
-                    <a href="#">Узнать больше →</a>
+                    <a href="https://vk.com/telich15">Узнать больше →</a>
                 </div>
             </div>
             
